Fikser feil i less-import

--- a/src/index.less
+++ b/src/index.less
@@ -1,45 +1,45 @@
-@minDesktop: ~"all and (min-width: 959px)";
-@maxDesktop: ~"all and (max-width: 959px)";
-@maxTablet: ~"all and (max-width: 959px)";
-@minTablet: ~"all and (min-width: 959px)";
-@maxMobile: ~"all and (max-width: 420px)";
-@minMobile: ~"all and (min-width: 420px)";
+@minDesktop: ~'all and (min-width: 959px)';
+@maxDesktop: ~'all and (max-width: 959px)';
+@maxTablet: ~'all and (max-width: 959px)';
+@minTablet: ~'all and (min-width: 959px)';
+@maxMobile: ~'all and (max-width: 420px)';
+@minMobile: ~'all and (min-width: 420px)';
 
-@import "App.less";
-@import "pages/forside/sections/3-header/Header.less";
-@import "pages/forside/sections/4-personinfo/1-personalia/Personalia.less";
-@import "pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/kontakt-og-reservasjonsregisteret/DKIF.less";
-@import "pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less";
-@import "pages/forside/sections/4-personinfo/2-kontaktinfo/KontaktInfo.less";
-@import "pages/forside/sections/4-personinfo/3-adresser/Adresser.less";
-@import "pages/forside/sections/4-personinfo/5-ditt-nav-kontor/apningstider/Apningstider.less";
-@import "pages/forside/sections/4-personinfo/5-ditt-nav-kontor/DittNavKontor.less";
-@import "pages/forside/sections/4-personinfo/4-utbetalinger/endring/utenlandsk-bankkonto/felter/AdresseFields";
-@import "pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less";
-@import "pages/forside/sections/5-arbeidsforhold/Arbeidsforhold.less";
-@import "pages/forside/sections/6-flere-opplysninger/Lenker.less";
-@import "pages/forside/sections/6-flere-opplysninger/linkbox/LinkBox.less";
-@import "pages/forside/sections/7-mer-informasjon/MerInformasjon.less";
-@import "pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less";
-@import "pages/endre-personopplysninger/EndreOpplysninger.less";
-@import "pages/digital-samhandling-offentlig-privat/historikk/DsopHistorikk.less";
-@import "pages/digital-samhandling-offentlig-privat/detaljer/DsopDetaljer.less";
-@import "pages/medlemskap-i-folketrygden/MedlHistorikk.less";
-@import "pages/institusjonsopphold/Inst.less";
-@import "pages/404/404.less";
+@import 'App.less';
+@import 'pages/forside/sections/3-header/Header.less';
+@import 'pages/forside/sections/4-personinfo/1-personalia/Personalia.less';
+@import 'pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/kontakt-og-reservasjonsregisteret/DKIF.less';
+@import 'pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less';
+@import 'pages/forside/sections/4-personinfo/2-kontaktinfo/KontaktInfo.less';
+@import 'pages/forside/sections/4-personinfo/3-adresser/Adresser.less';
+@import 'pages/forside/sections/4-personinfo/5-ditt-nav-kontor/apningstider/Apningstider.less';
+@import 'pages/forside/sections/4-personinfo/5-ditt-nav-kontor/DittNavKontor.less';
+@import 'pages/forside/sections/4-personinfo/4-utbetalinger/endring/utenlandsk-bankkonto/felter/AdresseFields';
+@import 'pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less';
+@import 'pages/forside/sections/5-arbeidsforhold/Arbeidsforhold.less';
+@import 'pages/forside/sections/6-flere-opplysninger/Lenker.less';
+@import 'pages/forside/sections/6-flere-opplysninger/linkbox/LinkBox.less';
+@import 'pages/forside/sections/7-mer-informasjon/MerInformasjon.less';
+@import 'pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less';
+@import 'pages/endre-personopplysninger/EndreOpplysninger.less';
+@import 'pages/digital-samhandling-offentlig-privat/historikk/DsopHistorikk.less';
+@import 'pages/digital-samhandling-offentlig-privat/detaljer/DsopDetaljer.less';
+@import 'pages/medlemskap-i-folketrygden/MedlHistorikk.less';
+@import 'pages/institusjonsopphold/Inst.less';
+@import 'pages/404/404.less';
 
-@import "components/box/Box.less";
-@import "components/felter/input-med-hjelpetekst/InputMedHjelpetekst.less";
-@import "components/felter/label-med-hjelpetekst/LabelMedHjelpetekst.less";
-@import "components/felter/input-postnummer/InputPostnummer.less";
-@import "components/felter/select/NAVSelect.less";
-@import "components/knapper/Redirect.less";
-@import "components/icon/Icon.less";
-@import "components/kilde/Kilde.less";
-@import "components/error/Error.less";
-@import "components/meny/Meny.less";
-@import "components/infotekst/Infotekst.less";
-@import "components/listelement/ListElement.less";
-@import "components/spinner/Spinner.less";
-@import "components/anchorlink/AnchorLink.less";
-@import "components/customHelpText/CustomHelpText.less";
+@import 'components/box/Box.less';
+@import 'components/felter/input-med-hjelpetekst/InputMedHjelpetekst.less';
+@import 'components/felter/label-med-hjelpetekst/LabelMedHjelpetekst.less';
+@import 'components/felter/input-postnummer/InputPostnummer.less';
+@import 'components/felter/select/NAVSelect.less';
+@import 'components/knapper/Redirect.less';
+@import 'components/icon/Icon.less';
+@import 'components/kilde/Kilde.less';
+@import 'components/errorMessage/ErrorMessage.less';
+@import 'components/meny/Meny.less';
+@import 'components/infotekst/Infotekst.less';
+@import 'components/listelement/ListElement.less';
+@import 'components/spinner/Spinner.less';
+@import 'components/anchorlink/AnchorLink.less';
+@import 'components/customHelpText/CustomHelpText.less';
