--- a/src/components/customHelpText/CustomHelpText.less
+++ b/src/components/customHelpText/CustomHelpText.less
@@ -3,7 +3,8 @@
     max-width: 50%;
   }
   &__help-button.navds-button {
-    padding: 0.3rem;
+    margin-top: -6px;
+    padding: 0.25rem;
 
     .navds-label {
       width: 1.5rem;
