Ryddet opp i bruk av label

--- a/src/components/felter/select/NAVSelect.less
+++ b/src/components/felter/select/NAVSelect.less
@@ -1,6 +1,10 @@
 .KodeverkSelect {
   margin-bottom: 1.5rem;
 
+  &__placeholder {
+    color: var(--a-text-subtle) !important;
+  }
+
   &__header {
     display: flex;
     min-height: 2rem;
