--- a/src/App.less
+++ b/src/App.less
@@ -18,6 +18,10 @@ body {
   margin-left: 0.5rem;
 }
 
+.skjemaelement {
+  margin: 1.5rem 0;
+}
+
 .popover {
   &__content-inner {
     max-width: 415px;
