--- a/src/components/spinner/Spinner.less
+++ b/src/components/spinner/Spinner.less
@@ -5,8 +5,5 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    .spinner {
-        margin-top: 1rem;
-    }
+    gap: 1rem;
 }
