--- a/src/pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less
+++ b/src/pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less
@@ -20,15 +20,9 @@
             }
         }
     }
-    &__bank-identifier {
-        margin: 1rem 0;
-    }
     &__knapper {
         display: flex;
-        padding: 1rem 0;
-    }
-    &__knapp:last-child {
-        margin-left: 0.5rem;
+        gap: 0.5rem;
     }
     &__input-container {
         display: flex;
