fjern mer styling

--- a/src/pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less
+++ b/src/pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less
@@ -13,7 +13,7 @@
     &__bankkode {
         &-rad {
             display: flex;
-            margin-bottom: 1.5rem;
+            align-items: flex-end;
         }
         &-kolonne:first-child {
             max-width: 4rem;
@@ -21,10 +21,6 @@
         }
         &-kolonne:last-child {
             width: 100%;
-
-            .navds-form-field {
-                gap: 0;
-            }
         }
     }
 }
