--- a/src/pages/forside/sections/7-mer-informasjon/MerInformasjon.less
+++ b/src/pages/forside/sections/7-mer-informasjon/MerInformasjon.less
@@ -8,17 +8,10 @@
         }
         display: flex;
         flex-direction: column;
+        gap: 1rem;
 
         .navds-link {
             display: inline;
         }
-    }
-
-    &__enkeltpanel {
-        margin-bottom: 1rem;
-    }
-
-    &__overskrift {
-        margin: 1rem 0;
     }
 }
