bruk gap til avstander i app wrapper

--- a/src/pages/forside/sections/6-flere-opplysninger/Lenker.less
+++ b/src/pages/forside/sections/6-flere-opplysninger/Lenker.less
@@ -1,6 +1,6 @@
 .el {
     &__panel {
-        margin: 4rem 0;
+        margin-top: 3rem;
         padding: 2rem 1.5rem !important;
         @media print {
             display: none;
