innfør grid i lister

--- a/src/components/box/Box.less
+++ b/src/components/box/Box.less
@@ -2,6 +2,16 @@
     &__wrapper {
         page-break-after: always;
 
+        .list {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 1rem;
+
+            & dd {
+                margin: 0;
+            }
+        }
+
         .navds-guide-panel__content {
             border: none;
         }
