--- a/src/components/box/Box.less
+++ b/src/components/box/Box.less
@@ -47,6 +47,10 @@
     }
 
     &__container {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
         @media @minDesktop {
             padding: 0 3rem;
         }
