--- a/src/pages/forside/sections/4-personinfo/5-ditt-nav-kontor/apningstider/Apningstider.less
+++ b/src/pages/forside/sections/4-personinfo/5-ditt-nav-kontor/apningstider/Apningstider.less
@@ -1,13 +1,14 @@
 @apningstiderBorder: 1px solid #3e3832;
 
 .apningstider {
-    margin: 0.75rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 
     &__table {
         width: 100%;
         border-collapse: collapse;
         border-bottom: @apningstiderBorder;
-        margin-bottom: 2rem;
     }
 
     &__caption {
