--- a/src/components/box/Box.less
+++ b/src/components/box/Box.less
@@ -1,4 +1,10 @@
 .box {
+    &__header {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+
     &__wrapper {
         page-break-after: always;
 
