align knapp venstre

--- a/src/components/kilde/Kilde.less
+++ b/src/components/kilde/Kilde.less
@@ -12,6 +12,7 @@
         text-transform: uppercase;
     }
     &__knapp.navds-button {
+        align-self: flex-start;
         margin-left: -1.5rem;
     }
 }
