--- a/src/index.less
+++ b/src/index.less
@@ -16,6 +16,7 @@
 @import 'pages/forside/sections/4-personinfo/5-ditt-nav-kontor/DittNavKontor.less';
 @import 'pages/forside/sections/4-personinfo/4-utbetalinger/endring/utenlandsk-bankkonto/felter/AdresseFields';
 @import 'pages/forside/sections/4-personinfo/4-utbetalinger/Utbetalinger.less';
+@import 'pages/forside/sections/4-personinfo/4-utbetalinger/endring/KontonummerForm.less';
 @import 'pages/forside/sections/6-flere-opplysninger/Lenker.less';
 @import 'pages/forside/sections/6-flere-opplysninger/linkbox/LinkBox.less';
 @import 'pages/forside/sections/7-mer-informasjon/MerInformasjon.less';
