--- a/src/App.less
+++ b/src/App.less
@@ -44,7 +44,9 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 0 0.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    padding-top: 2rem;
 }
 
 .capitalize {
