--- a/src/App.less
+++ b/src/App.less
@@ -44,9 +44,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    padding-top: 2rem;
+    padding: 2rem 0.5em;
 }
 
 .capitalize {
