legg til gap tlf

--- a/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
+++ b/src/pages/forside/sections/4-personinfo/2-kontaktinfo/subsections/telefonnummer/Telefonnummer.less
@@ -37,9 +37,6 @@
         justify-content: space-between;
         align-items: center;
     }
-    &__form {
-        margin: 0.5rem 0;
-    }
     &__verdi {
         @media @maxMobile {
             margin-bottom: 0.5rem;
@@ -50,6 +47,7 @@
         display: flex;
         flex-wrap: wrap;
         margin-top: 1rem;
+        gap: 1rem;
     }
     &__alert {
         margin-top: 0.5rem;
