--- a/src/index.less
+++ b/src/index.less
@@ -36,6 +36,7 @@
 @import 'components/kilde/Kilde.less';
 @import 'components/errorMessage/ErrorMessage.less';
 @import 'components/infotekst/Infotekst.less';
+@import 'components/listelement/Liste.less';
 @import 'components/listelement/ListElement.less';
 @import 'components/spinner/Spinner.less';
 @import 'components/anchorlink/AnchorLink.less';
