--- a/src/index.less
+++ b/src/index.less
@@ -22,6 +22,7 @@
 @import 'pages/forside/sections/7-mer-informasjon/MerInformasjon.less';
 @import 'pages/detaljert-arbeidsforhold/DetaljertArbeidsforhold.less';
 @import 'pages/endre-personopplysninger/EndreOpplysninger.less';
+@import 'pages/endre-kontonummer/result/EndreKontonummerResult.less';
 @import 'pages/digital-samhandling-offentlig-privat/historikk/DsopHistorikk.less';
 @import 'pages/digital-samhandling-offentlig-privat/detaljer/DsopDetaljer.less';
 @import 'pages/medlemskap-i-folketrygden/MedlHistorikk.less';
